Adding the product page timer and banner

--- a/product-page-countdowntimer.liquid
+++ b/product-page-countdowntimer.liquid
@@ -2,8 +2,8 @@
 <div class="countdown-container">
     <div class="stock-message" id="pp-countdown-start-message">
         <b>CHRISTMAS CLEARANCE!</b><br>
-        Use code <span class="stock-count"><b>LASTCHANCE10</b></span> to unlock an <b>
-        <span class="stock-count">EXTRA 10% OFF</b> on Christmas Products!</span>
+        Use code <span class="stock-count"><b>LASTCHANCE10</b></span> to unlock an 
+        <span class="stock-count"><b>EXTRA 10% OFF</b> on Christmas Products!</span>
         <span class="stock-count"><b>Hurry! Sale ends in:</b></span> <br>
     </div>
     <div id="pp-countdown-end-message">
@@ -116,7 +116,6 @@
     }
   
   </style>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script>
     let product_countDownDateStart = new Date("February 01, 2025 00:00:00").getTime();
     let product_countDownDate = new Date("February 14, 2025 23:59:59").getTime();
@@ -149,3 +148,4 @@
       }
     }, 1000);
   </script>
+  
